Closed Bug 184956 Opened 22 years ago Closed 22 years ago

[gtk2] pdf plugin ( nppdf.so ) crashes

Categories

(Core Graveyard :: Plug-ins, defect)

Sun
Solaris
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: iamawalrus, Assigned: iamawalrus)

References

Details

(Keywords: crash)

Attachments

(1 file)

1. install nppdf.so
2. view page contains pdf
result: mozilla crashes
OS: Linux → Solaris
Attached patch patchSplinter Review
Attachment #109086 - Flags: review?(blizzard)
Checked in.  Thanks!
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment on attachment 109086 [details] [diff] [review]
patch

r=blizzard
Attachment #109086 - Flags: review?(blizzard) → review+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: