Bug #184956.  pdf plugin crashes with gtk2.  Fix from robin.lu@sun.com.